deploy/dev/be/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: be-pawn-service-deployment
  namespace: dev-pawn-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pawn-serivce-app-be
  template:
    metadata:
      labels:
        app: pawn-serivce-app-be
    spec:
      containers:
        - name: pawn-service-container
          image: anhmai7777/pawn-service-fe:20260404055241
          ports:
            - containerPort: 80
