deploy/dev/be/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pawn-service-service
  namespace: dev-pawn-service
spec:
  type: ClusterIP
  selector:
    app: pawn-serivce-app
  ports:
    - port: 80
      targetPort: 80
