deploy/dev/be/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pawn-service-ingress
  namespace: dev-pawn-service
spec:
  ingressClassName: nginx
  rules:
    - host: "fe-pawn.dev.localhost"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: pawn-service-service
                port:
                  number: 80
